@@ -1,4 +1,16 @@
 
+Изменения в nginx 1.21.6                                          25.01.2022
+
+    *) Исправление: при использование EPOLLEXCLUSIVE на Linux распределение
+       клиентских соединений между рабочими процессами было неравномерным.
+
+    *) Исправление: во время плавного завершения старых рабочих процессов
+       nginx возвращал в ответах строку заголовка "Connection: keep-alive".
+
+    *) Исправление: в директиве ssl_session_ticket_key при использовании
+       TLSv1.3.
+
+
 Изменения в nginx 1.21.5                                          28.12.2021
 
     *) Изменение: теперь nginx по умолчанию собирается с библиотекой PCRE2.
